--- a/nlasp_main.tex
+++ b/nlasp_main.tex
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % LaTeX4EI Template for Cheat Sheets                                Version 1.0
 %
-% Authors: Emanuel Regnath, Martin Zellner
+% Authors: Markus Kaschke
 % Contact: info@latex4ei.de
 % Encode: UTF-8, tabwidth = 4, newline = LF
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -17,7 +17,7 @@
 
 % set document information
 \title{NLASP}
-\author{LaTeX4EI}					% optional, delete if unchanged
+\author{Markus Kaschke}					% optional, delete if unchanged
 \myemail{info@latex4ei.de}			% optional, delete if unchanged
 \mywebsite{www.latex4ei.de}			% optional, delete if unchanged
 
